fixing some issues in exceptions handling and instantiating classes through reflection